syntax = "proto3";

package ext;

option go_package = "github.com/tislib/apibrew/pkg/ext";

import 'model/record.proto';
import 'model/resource.proto';
import 'model/query.proto';
import 'model/error.proto';
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import 'google/protobuf/struct.proto';
import "model/event.proto";

service Function {
  rpc FunctionCall (FunctionCallRequest) returns (FunctionCallResponse) {}
}

message FunctionCallRequest {
  string name = 1;
  model.Event event = 2;
}

message FunctionCallResponse {
  /*
     This event is only used/required if it is a sync event.
   */
  model.Event event = 1;
}